# nanovg

./: CMakeLists.txt
example/: demo.c  perf.c
src/: nanovg.c  nanovg.cpp  nanovg.h  nanovg_gl.h  nanovg_gl_utils.h  nanovg_mtl.h  nanovg_mtl.m  nanovg_mtl_shaders.metal
src/fp16/: fp16.h
src/mnvg_bitcode/: ios.h  ios.metallibsym  macos.h  macos.metallibsym  simulator.h  simulator.metallibsym  tvos.h  tvos.metallibsym
tools/: metallib  metallib_debug
